# emceecee

./: .gitignore  CMakeLists.txt  README.md
src/: EnsembleSampler.cpp  EnsembleSampler.h  GMHSampler.cpp  GMHSampler.h  MHSampler.cpp  MHSampler.h  function.h  position.h  sampler.cpp  util.cpp
src/proposal/: Function.h  NormalDistribution.h
tests/: rosenbrock.cpp
